[gd_scene load_steps=3 format=3 uid="uid://bn2sqocpkdasq"]

[ext_resource type="Script" uid="uid://27uppdithiow" path="res://level/ui/level_ui.gd" id="1_jdrio"]
[ext_resource type="PackedScene" uid="uid://cut4p2vuxvwhs" path="res://pay_table/pay_table.tscn" id="2_b6tlu"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jdrio")

[node name="PayTable" parent="." instance=ExtResource("2_b6tlu")]
unique_name_in_owner = true
layout_mode = 1
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainerDealDrawMoney" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(57, 23)
layout_mode = 2
theme_override_constants/separation = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="HBoxContainerText" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelPayout" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerText"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelMoney" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerText"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100000 CREDITS"
horizontal_alignment = 2

[node name="HBoxContainerButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button0" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonDealDraw" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "DEAL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerButtons/ButtonDealDraw" to="." method="_on_button_deal_draw_pressed"]
